--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "npm": "^6.4.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.1.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
