--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "say-hello": "echo 'Hello, world!'",
     "lint": "./node_modules/eslint/bin/eslint.js ./src/",
     "clean": "rm -r dist && mkdir dist",
-    "build": "npm run clean && webpack"
+    "build": "npm run clean && webpack",
+    "run": "google-chrome ./dist/create/index.html"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,8 @@
     "eslint": "^5.7.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "express": "^4.16.4",
+    "express-fileupload": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
