--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "say-hello": "echo 'Hello, world!'",
     "lint": "./node_modules/eslint/bin/eslint.js ./src/",
     "clean": "rm -r dist && mkdir dist",
-    "build": "npm run clean && webpack"
+    "build": "npm run clean && webpack",
+    "show": "google-chrome ./dist/create/index.html"
   },
   "repository": {
     "type": "git",
