Docker, Travis, Husky added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "messenger-frontend",
+  "homepage": "https://denisstasyev.github.io/messenger-frontend/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -29,12 +30,14 @@
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
+    "husky": "^2.3.0",
     "identity-obj-proxy": "3.0.0",
     "immutable": "^4.0.0-rc.12",
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.2",
     "jest-resolve": "23.6.0",
     "jest-watch-typeahead": "^0.2.1",
+    "lint-staged": "^8.1.7",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
@@ -62,7 +65,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "CI=true node scripts/test.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -79,7 +82,7 @@
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
     "express-fileupload": "^1.1.1-alpha.3",
-    "prettier": "^1.16.4"
+    "prettier": "^1.17.1"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -129,6 +132,21 @@
   "babel": {
     "presets": [
       "react-app"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{json,css,scss,md}": [
+      "prettier --write",
+      "git add"
+    ],
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "git add"
     ]
   }
 }
