--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,14 @@ cache:
   directories:
     - node_modules
 script:
-  - npm test
-  - npm run test:coverage
+  # - npm test
+  # - npm run test:coverage
   - npm run build
 
 deploy:
   provider: pages
   skip_cleanup: true
-  github_token: a75e265c7e84a8a816df8a0f03fe8a457088ff76
+  github_token: 6d23a3acab7f475ee5cfd64c502d1a2543ed51e1
   local_dir: build
   on:
     branch: master
