--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,11 @@ script:
   # - npm test
   # - npm run test:coverage
   - npm run build
-  - npm run deploy
 
 deploy:
   provider: pages
   skip_cleanup: true
+  github-token: $GITHUB_TOKEN
   local_dir: build
   on:
     branch: master
