--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script:
   # - npm test
   # - npm run test:coverage
   - npm run build
-  # - npm run before-deploy
+  - npm run before-deploy
   - npm run deploy
 
 deploy:
