--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,13 @@ script:
   # - npm test
   # - npm run test:coverage
   - npm run build
-  - npm run before-deploy
+  # - npm run before-deploy
   - npm run deploy
 
 deploy:
   provider: pages
   skip_cleanup: true
-  github_token: $GITHUB_TOKEN
+  github_token: $repo_token
   local_dir: build
   on:
     branch: master
