--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
   # - npm run test:coverage
   - npm run build
   # - npm run before-deploy
-  - npm run deploy
+  # - npm run deploy
 
 deploy:
   provider: pages
