--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "test": "CI=true node scripts/test.js",
     "test:coverage": "npm test -- --coverage",
     "before-deploy": "git config --global user.email publish@travis.github && git config --global user.name 'Travis'",
-    "deploy": "gh-pages -d build"
+    "deploy": "CI=true gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
