--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "2018-FS-11-Frontend-Stasyev",
+  "homepage": "https://denisstasyev.github.io/2018-FS-11-Frontend-Stasyev/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -63,11 +64,9 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "CI=true node scripts/test.js",
-    "test:coverage": "npm test -- --coverage",
-    "before-deploy": "git config --global user.email publish@travis.github && git config --global user.name 'Travis'",
-    "deploy": "gh-pages-with-token -d build"
+    "build": "CI=true node scripts/build.js",
+    "test": "node scripts/test.js",
+    "test:coverage": "npm test -- --coverage"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -85,7 +84,6 @@
     "eslint-plugin-prettier": "^3.0.1",
     "express-fileupload": "^1.1.1-alpha.3",
     "gh-pages": "^2.0.1",
-    "gh-pages-with-token": "^1.0.0",
     "prettier": "^1.17.1"
   },
   "jest": {
@@ -152,6 +150,5 @@
       "eslint --fix",
       "git add"
     ]
-  },
-  "homepage": "https://denisstasyev.github.io/2018-FS-11-Frontend-Stasyev/"
+  }
 }
